option('examples',
       type : 'boolean',
       value : false,
       description : 'Build example programs')

option('tests',
       type : 'boolean',
       value : false,
       description : 'Build test programs')

option('nolibc',
       type : 'boolean',
       value : false,
       description : 'Build liburing without libc')
