install_man(
  'io_uring.7',
  'io_uring_buf_ring_add.3',
  'io_uring_buf_ring_advance.3',
  'io_uring_buf_ring_cq_advance.3',
  'io_uring_buf_ring_init.3',
  'io_uring_buf_ring_mask.3',
  'io_uring_cq_advance.3',
  'io_uring_cqe_get_data.3',
  'io_uring_cqe_get_data64.3',
  'io_uring_cqe_seen.3',
  'io_uring_cq_ready.3',
  'io_uring_enter.2',
  'io_uring_free_probe.3',
  'io_uring_get_probe.3',
  'io_uring_get_sqe.3',
  'io_uring_opcode_supported.3',
  'io_uring_peek_cqe.3',
  'io_uring_prep_accept.3',
  'io_uring_prep_accept_direct.3',
  'io_uring_prep_cancel.3',
  'io_uring_prep_close.3',
  'io_uring_prep_close_direct.3',
  'io_uring_prep_connect.3',
  'io_uring_prep_fadvise.3',
  'io_uring_prep_fallocate.3',
  'io_uring_prep_files_update.3',
  'io_uring_prep_fsync.3',
  'io_uring_prep_link.3',
  'io_uring_prep_linkat.3',
  'io_uring_prep_madvise.3',
  'io_uring_prep_mkdir.3',
  'io_uring_prep_mkdirat.3',
  'io_uring_prep_msg_ring.3',
  'io_uring_prep_multishot_accept.3',
  'io_uring_prep_multishot_accept_direct.3',
  'io_uring_prep_openat2.3',
  'io_uring_prep_openat2_direct.3',
  'io_uring_prep_openat.3',
  'io_uring_prep_openat_direct.3',
  'io_uring_prep_poll_add.3',
  'io_uring_prep_poll_multishot.3',
  'io_uring_prep_poll_remove.3',
  'io_uring_prep_poll_update.3',
  'io_uring_prep_provide_buffers.3',
  'io_uring_prep_read.3',
  'io_uring_prep_read_fixed.3',
  'io_uring_prep_readv2.3',
  'io_uring_prep_readv.3',
  'io_uring_prep_recv.3',
  'io_uring_prep_recv_multishot.3',
  'io_uring_prep_recvmsg.3',
  'io_uring_prep_recvmsg_multishot.3',
  'io_uring_prep_remove_buffers.3',
  'io_uring_prep_rename.3',
  'io_uring_prep_renameat.3',
  'io_uring_prep_send.3',
  'io_uring_prep_sendmsg.3',
  'io_uring_prep_shutdown.3',
  'io_uring_prep_socket.3',
  'io_uring_prep_socket_direct.3',
  'io_uring_prep_splice.3',
  'io_uring_prep_statx.3',
  'io_uring_prep_symlink.3',
  'io_uring_prep_symlinkat.3',
  'io_uring_prep_sync_file_range.3',
  'io_uring_prep_tee.3',
  'io_uring_prep_timeout.3',
  'io_uring_prep_timeout_remove.3',
  'io_uring_prep_timeout_update.3',
  'io_uring_prep_unlink.3',
  'io_uring_prep_unlinkat.3',
  'io_uring_prep_write.3',
  'io_uring_prep_write_fixed.3',
  'io_uring_prep_writev2.3',
  'io_uring_prep_writev.3',
  'io_uring_queue_exit.3',
  'io_uring_queue_init.3',
  'io_uring_queue_init_params.3',
  'io_uring_recvmsg_cmsg_firsthdr.3',
  'io_uring_recvmsg_cmsg_nexthdr.3',
  'io_uring_recvmsg_name.3',
  'io_uring_recvmsg_out.3',
  'io_uring_recvmsg_payload.3',
  'io_uring_recvmsg_payload_length.3',
  'io_uring_recvmsg_validate.3',
  'io_uring_register.2',
  'io_uring_register_buffers.3',
  'io_uring_register_buf_ring.3',
  'io_uring_register_eventfd.3',
  'io_uring_register_eventfd_async.3',
  'io_uring_register_files.3',
  'io_uring_register_iowq_aff.3',
  'io_uring_register_iowq_max_workers.3',
  'io_uring_register_ring_fd.3',
  'io_uring_setup.2',
  'io_uring_sqe_set_data.3',
  'io_uring_sqe_set_data64.3',
  'io_uring_sqe_set_flags.3',
  'io_uring_sq_ready.3',
  'io_uring_sqring_wait.3',
  'io_uring_sq_space_left.3',
  'io_uring_submit.3',
  'io_uring_submit_and_wait.3',
  'io_uring_submit_and_wait_timeout.3',
  'io_uring_unregister_buffers.3',
  'io_uring_unregister_buf_ring.3',
  'io_uring_unregister_eventfd.3',
  'io_uring_unregister_files.3',
  'io_uring_unregister_iowq_aff.3',
  'io_uring_unregister_ring_fd.3',
  'io_uring_wait_cqe.3',
  'io_uring_wait_cqe_nr.3',
  'io_uring_wait_cqes.3',
  'io_uring_wait_cqe_timeout.3',
)
